@@ -10,6 +10,6 @@
     "item": "irons_spellbooks:holy_rune"
   },
   "result": {
-    "item": "dacxirons:blessed_priest_helmet"
+    "item": "dacxirons:blessed_priest_hood"
   }
 }
